# RuVector

./: .dockerignore  .gcloudignore  .gitignore  CLAUDE.md  Cargo.toml  PLAYBOOK-INSTITUTIONAL.md  PLAYBOOK-INTEGRATION.md  README.md  package.json  ternlang.toml  workers.yaml
crates/compact-graph-embed/: Cargo.toml
crates/compact-graph-embed/benches/: embed_bench.rs
crates/compact-graph-embed/src/: anchor.rs  embedder.rs  error.rs  graph.rs  lib.rs  storage.rs  traits.rs
crates/compact-graph-embed/tests/: integration.rs
crates/neural-trader-coherence/: Cargo.toml
crates/neural-trader-core/: Cargo.toml
crates/neural-trader-strategies/: Cargo.toml
crates/neural-trader-strategies/src/: attention_scalper.rs  coherence_arb.rs  coherence_bridge.rs  ev_kelly.rs  intent.rs  lib.rs  risk.rs
crates/ruvector-acorn/: Cargo.toml
crates/ruvector-acorn-wasm/: Cargo.toml  build.sh
crates/ruvector-acorn-wasm/src/: lib.rs
crates/ruvector-acorn/benches/: acorn_bench.rs
crates/ruvector-acorn/src/: dist.rs  error.rs  graph.rs  index.rs  lib.rs  main.rs  search.rs
crates/ruvector-cnn/: Cargo.toml  README.md
crates/ruvector-cnn-wasm/: Cargo.toml
crates/ruvector-cnn-wasm/src/: lib.rs
crates/ruvector-cnn/benches/: cnn_benchmarks.rs  int8_bench.rs
crates/ruvector-cnn/docs/: ADR-091-PHASE-2.1-COMPLETE.md  ADR-091-PHASE-3-IMPLEMENTATION.md  ADR-091-PHASE-4-IMPLEMENTATION.md  ADR-091_PHASE_6_SUMMARY.md  GRAPH_REWRITE_SUMMARY.md  INT8_KERNELS_IMPLEMENTATION.md  QUANTIZED_LAYERS_USAGE.md
crates/ruvector-cnn/examples/: graph_rewrite_demo.rs
crates/ruvector-cnn/src/: config.rs  embedding.rs  error.rs  lib.rs  tensor.rs
crates/ruvector-cnn/tests/: acceptance_gates.rs  backbone_test.rs  contrastive_test.rs  graph_rewrite_integration.rs  integration_test.rs  kernel_equivalence.rs  layers_test.rs  quality_validation.rs  simd_test.rs
crates/ruvector-collections/: Cargo.toml  build.rs
crates/ruvector-collections/benches/: primality.rs
crates/ruvector-collections/src/: collection.rs  error.rs  lib.rs  manager.rs  primality.rs  primality_kernel.rs
crates/ruvector-collections/tests/: primality_pseudoprimes.rs  table_cross_check.rs
crates/ruvector-consciousness/: Cargo.toml
crates/ruvector-consciousness-wasm/: Cargo.toml
crates/ruvector-consciousness-wasm/src/: lib.rs
crates/ruvector-consciousness/benches/: phi_benchmark.rs
crates/ruvector-consciousness/src/: arena.rs  bounds.rs  ces.rs  chebyshev_phi.rs  coherence_phi.rs  collapse.rs  emergence.rs  error.rs  geomip.rs  iit4.rs  lib.rs  mincut_phi.rs  parallel.rs  phi.rs  phi_id.rs  pid.rs  rsvd_emergence.rs  simd.rs  sparse_accel.rs  streaming.rs  traits.rs  types.rs  witness_phi.rs
crates/ruvector-consciousness/tests/: integration.rs
crates/ruvector-crv/: Cargo.toml
crates/ruvector-crv/src/: stage_iii.rs
crates/ruvector-dag/: Cargo.toml  README.md
crates/ruvector-dag/benches/: dag_benchmarks.rs
crates/ruvector-dag/examples/: attention_demo.rs  attention_selection.rs  basic_usage.rs  learning_workflow.rs  self_healing.rs  synthetic_haptic.rs
crates/ruvector-dag/src/: lib.rs
crates/ruvector-dag/tests/: mincut_tests.rs
crates/ruvector-decompiler-wasm/: Cargo.toml
crates/ruvector-decompiler-wasm/src/: lib.rs
crates/ruvector-diskann/: Cargo.toml
crates/ruvector-diskann/benches/: rabitq_recall.rs
crates/ruvector-diskann/src/: distance.rs  graph.rs  index.rs  lib.rs  pq.rs
crates/ruvector-diskann/tests/: disk_backed_rerank.rs  quantizer_search_uses_codes.rs  rabitq_quantizer.rs
crates/ruvector-dna-bench/: Cargo.toml
crates/ruvector-dna-bench/src/: lib.rs
crates/ruvector-eml-hnsw/: Cargo.toml
crates/ruvector-eml-hnsw/benches/: eml_e2e.rs  eml_hnsw_bench.rs  rerank_kernel.rs
crates/ruvector-eml-hnsw/src/: adaptive_ef.rs  cosine_decomp.rs  hnsw_integration.rs  lib.rs  opq.rs  path_predictor.rs  pq.rs  pq_corrector.rs  pq_hnsw.rs  progressive_distance.rs  progressive_hnsw.rs  rebuild_predictor.rs  selected_distance.rs
crates/ruvector-eml-hnsw/tests/: progressive_sift1m.rs  recall_integration.rs  retention_vs_pearson.rs  sift1m_baseline_hnswlib.rs  sift1m_full_1m.rs  sift1m_opq.rs  sift1m_pq.rs  sift1m_pq_native.rs  sift1m_real.rs
crates/ruvector-finger/: Cargo.toml
crates/ruvector-finger/benches/: finger_bench.rs
crates/ruvector-finger/src/: basis.rs  dist.rs  error.rs  graph.rs  index.rs  lib.rs  main.rs  search.rs
crates/ruvector-gnn/: Cargo.toml
crates/ruvector-gnn-wasm/: Cargo.toml
crates/ruvector-gnn-wasm/src/: lib.rs
crates/ruvector-gnn/benches/: gnn_forward.rs
crates/ruvector-gnn/src/: graphmae.rs  lib.rs  search.rs
crates/ruvector-graph/: Cargo.toml
crates/ruvector-graph/benches/: vector_property_index.rs
crates/ruvector-graph/fuzz/: Cargo.toml
crates/ruvector-graph/src/: error.rs  graph.rs  index.rs  lib.rs  storage.rs  types.rs  vector_property_index.rs
crates/ruvector-graph/tests/: compatibility_tests.rs  edge_tests.rs  node_tests.rs  vector_property_index.rs
crates/ruvector-kalshi/: Cargo.toml
crates/ruvector-kalshi/examples/: bench_signing.rs  list_markets.rs  live_trade.rs  paper_trade.rs  stream_orderbook.rs  validate.rs
crates/ruvector-kalshi/src/: auth.rs  brain.rs  lib.rs  models.rs  normalize.rs  rate_limit.rs  rest.rs  secrets.rs  strategy_adapter.rs  ws.rs  ws_client.rs
crates/ruvector-kalshi/tests/: live_smoke.rs
crates/ruvector-mincut-brain-node/: Cargo.toml
crates/ruvector-mincut-brain-node/src/: lib.rs
crates/ruvector-nervous-system/: Cargo.toml  README.md
crates/ruvector-nervous-system/examples/: README.md
crates/ruvector-nervous-system/tests/: ewc_tests.rs  throughput.rs
crates/ruvector-neural-decoder/: Cargo.toml
crates/ruvector-neural-decoder/benches/: neural_decoder_bench.rs
crates/ruvector-neural-decoder/src/: decoder.rs  encoder.rs  error.rs  features.rs  (+6 more)
crates/ruvector-py/: Cargo.toml  README.md  pyproject.toml
crates/ruvector-quantum-monitor/: Cargo.toml
crates/ruvector-rabitq-wasm/: Cargo.toml  build.sh
leviathan-ai/: .gitignore  Cargo.toml  README.md
leviathan-ai/scripts/: build-windows.ps1
(+2739 files in other folders)
