[workspace]
resolver = "2"
members = [
    "crates/leviathan-core",
    "crates/leviathan-lattice",
    "crates/leviathan-dag",
    "crates/leviathan-swarm",
    "crates/leviathan-ui",
    "crates/leviathan-cli",
    "crates/leviathan-agent",
    "crates/leviathan-compliance",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Leviathan AI <engineering@leviathan.ai>"]
repository = "https://github.com/leviathan-ai/leviathan"
description = "Enterprise AI orchestration with full DAG auditability"

[workspace.dependencies]
# Core
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Crypto & Security
sha2 = "0.10"
blake3 = "1.5"
ed25519-dalek = "2.1"
rand = "0.8"
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }

# DAG & Graph
petgraph = "0.6"
dashmap = "5.5"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
crossterm = "0.27"
ratatui = "0.25"

# WASM
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
console_error_panic_hook = "0.1"

# UI (egui for Win95+Cyberpunk aesthetic)
eframe = "0.25"
egui = "0.25"
egui-wgpu = "0.25"

# Serialization
rkyv = { version = "0.7", features = ["validation"] }
bincode = "1.3"
toml = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async
futures = "0.3"
async-trait = "0.1"
crossbeam = "0.8"
rayon = "1.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.release-wasm]
inherits = "release"
opt-level = "s"
