[package]
name = "neural-trader-coherence"
version = "0.1.0"
edition = "2021"
description = "MinCut coherence gate, CUSUM drift detection, and proof-gated mutation for Neural Trader"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
