[package]
name = "neural-trader-core"
version = "0.1.0"
edition = "2021"
description = "Canonical market event types, ingest pipeline, and graph schema for RuVector Neural Trader"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
