[package]
name = "ruvector-acorn-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for ruvector-acorn — predicate-agnostic filtered HNSW for browsers and edge runtimes"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruvnet/ruvector"
keywords = ["acorn", "vector-search", "filtered-search", "hnsw", "wasm"]
categories = ["wasm", "science", "algorithms"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
ruvector-acorn = { path = "../ruvector-acorn" }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true

# Research-tier crate, doc/style churn deferred. Correctness + suspicious lints
# stay denied.
[lints.rust]
unexpected_cfgs = { level = "allow", priority = -1 }

[lints.clippy]
pedantic = { level = "allow", priority = -2 }
all = { level = "warn", priority = -1 }
correctness = "deny"
suspicious = "deny"
