[package]
name = "ruvector-collections"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "High-performance collection management for Ruvector vector databases"
build = "build.rs"

[features]
default = []
# Opt-in probabilistic Miller-Rabin for u128 (PRD §5, ADR-151).
# WASM u128 codegen is ~5× slower than native; gate keeps it out of default bundles.
unstable-u128 = []

[dependencies]
ruvector-core = { version = "2.0.2", path = "../ruvector-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "primality"
harness = false

