[package]
name = "ruvector-crv"
version = "0.1.0"
edition = "2021"
authors = ["ruvector contributors"]
description = "CRV (Coordinate Remote Viewing) protocol integration for ruvector - maps 6-stage signal line methodology to vector database subsystems"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruvnet/ruvector"
keywords = ["crv", "signal-line", "vector-search", "attention", "hyperbolic"]
categories = ["algorithms", "science"]

[lib]
crate-type = ["rlib"]

[features]
default = []

[dependencies]
ruvector-attention = { path = "../ruvector-attention" }
ruvector-gnn = { path = "../ruvector-gnn" }
ruvector-mincut = { path = "../ruvector-mincut", default-features = false, features = ["exact"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
approx = "0.5"
