[package]
name = "ruvector-eml-hnsw"
version = "0.1.0"
edition = "2021"
description = "EML-powered HNSW optimizations: search path prediction, rebuild prediction, PQ distance correction"
license = "MIT"

[dependencies]
eml-core = { path = "../../patches/eml-core" }
hnsw_rs = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rand = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "eml_hnsw_bench"
harness = false

[[bench]]
name = "eml_e2e"
harness = false

[[test]]
name = "recall_integration"
path = "tests/recall_integration.rs"
