[package]
name = "ruvector-kalshi"
version = "0.1.0"
edition = "2021"
description = "Kalshi exchange integration for the RuVector Neural Trader (ADR-151)"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
neural-trader-core = { path = "../neural-trader-core" }
neural-trader-strategies = { path = "../neural-trader-strategies" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros", "process", "time", "fs"] }
chrono = { workspace = true }
tracing = { workspace = true }

# Crypto — Kalshi requires RSA-PSS-SHA256
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
rand = { workspace = true }
base64 = "0.22"

# HTTP — match existing graph (mcp-brain uses reqwest 0.12 + rustls)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
