[package]
name = "ruvector-nervous-system"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Core deps
rand = { workspace = true }
rand_distr = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
ndarray = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }

# Parallel processing (optional for EWC)
rayon = { workspace = true, optional = true }

# Optional serialization
bincode = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
approx = "0.5"

[features]
default = ["parallel"]
serde = ["dep:bincode"]
parallel = ["rayon"]

[[bench]]
name = "pattern_separation"
harness = false

[[bench]]
name = "eprop_bench"
harness = false

[[bench]]
name = "ewc_bench"
harness = false

[[bench]]
name = "btsp_bench"
harness = false

[[bench]]
name = "hdc_bench"
harness = false

[[bench]]
name = "latency_benchmarks"
harness = false

# Tier 1: Immediate Practical Applications
[[example]]
name = "anomaly_detection"
path = "examples/tier1/anomaly_detection.rs"

[[example]]
name = "edge_autonomy"
path = "examples/tier1/edge_autonomy.rs"

[[example]]
name = "medical_wearable"
path = "examples/tier1/medical_wearable.rs"

# Tier 2: Near-Term Transformative Applications
[[example]]
name = "self_optimizing_systems"
path = "examples/tier2/self_optimizing_systems.rs"

[[example]]
name = "swarm_intelligence"
path = "examples/tier2/swarm_intelligence.rs"

[[example]]
name = "adaptive_simulation"
path = "examples/tier2/adaptive_simulation.rs"

# Tier 3: Exotic But Real Applications
[[example]]
name = "machine_self_awareness"
path = "examples/tier3/machine_self_awareness.rs"

[[example]]
name = "synthetic_nervous_systems"
path = "examples/tier3/synthetic_nervous_systems.rs"

[[example]]
name = "bio_machine_interface"
path = "examples/tier3/bio_machine_interface.rs"
